[gd_scene load_steps=4 format=2]

[ext_resource path="res://peaje.gd" type="Script" id=1]
[ext_resource path="res://peaje.png" type="Texture" id=2]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -29.1112, -23.7018 )
b = Vector2( 27.209, 11.2306 )

[node name="peaje" type="Sprite"]
position = Vector2( -1300.68, 1142.77 )
scale = Vector2( 0.65453, 0.5787 )
texture = ExtResource( 2 )
hframes = 2
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"peaje",
]]
position = Vector2( 15.4065, 32.6724 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 13.1174, 17.3436 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 15.4065, 32.6724 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -32.7386, -68 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
